--- a/action.yml
+++ b/action.yml
@@ -8,23 +8,5 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: echo '::error::The Emojicode compiler is incompatible with Windows.'
-      if: ${{ runner.os == 'Windows' }}
-    - run: |
-        curl -o emojicode.tar.gz -L https://github.com/emojicode/emojicode/releases/download/v${{ inputs.version }}/Emojicode-${{ inputs.version }}-Linux-x86_64.tar.gz \
-        && tar -xzf emojicode.tar.gz && rm emojicode.tar.gz \
-        && cd Emojicode-${{ inputs.version }}-Linux-x86_64 \
-        && sudo mkdir -p /usr/local/include/emojicode && sudo mv include/* /usr/local/include/emojicode \
-        && sudo mkdir -p /usr/local/EmojicodePackages && sudo mv packages/* /usr/local/EmojicodePackages \
-        && sudo mv emojicodec /usr/local/bin/emojicodec \
-        && cd .. && rm -r Emojicode-${{ inputs.version }}-Linux-x86_64
-      if: ${{ runner.os == 'Linux'}}
-    - run: |
-        curl -o emojicode.tar.gz -L https://github.com/emojicode/emojicode/releases/download/v${{ inputs.version }}/Emojicode-${{ inputs.version }}-Darwin-x86_64.tar.gz
-        && tar -xzf emojicode.tar.gz && rm emojicode.tar.gz \
-        && cd Emojicode-${{ inputs.version }}-Darwin-x86_64 \
-        && sudo mkdir -p /usr/local/include/emojicode && sudo mv include/* /usr/local/include/emojicode \
-        && sudo mkdir -p /usr/local/EmojicodePackages && sudo mv packages/* /usr/local/EmojicodePackages \
-        && sudo mv emojicodec /usr/local/bin/emojicodec \
-        && cd .. && rm -r Emojicode-${{ inputs.version }}-Darwin-x86_64
-      if: ${{ runner.os == 'macOS'}}
+    - run: ./run.sh
+      shell: bash
