--- a/action.yml
+++ b/action.yml
@@ -10,3 +10,5 @@ runs:
   steps:
     - run: ${{ github.action_path }}/run.sh
       shell: bash
+      env:
+        EMOJI_VERSION: ${{ inputs.version }}
